# spotify_mcp

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  start_server.py
.github/workflows/: deploy_spotify_mcp.yaml
examples/: find_user_playlist.py  get_access_token.py  test_functions.py
spotify_mcp/: __init__.py  dependencies.py
spotify_mcp/auth/: __init__.py  spotify_auth.py
spotify_mcp/core/: __init__.py  config.py
spotify_mcp/models/: __init__.py  models.py
spotify_mcp/services/: __init__.py  spotify_service.py
spotify_mcp/tools/: __init__.py  analysis.py  library.py  playback.py  playlists.py  search.py
